--- a/src/components/objectLost/style.css
+++ b/src/components/objectLost/style.css
@@ -1,46 +1,87 @@
-@import url(../variables.css);
+/*------------COLORS IMPORT----------------------- */
+@import url(./src/components/variables.css);
 
 *{
-    box-sizing: border-box;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+  margin: 0;
+  box-sizing: border-box;
 }
 
-h2,h3, p{
-    margin: 0;
+h1,h2{
+  font-family:  "Ubuntu", sans-serif;
+  color: #161E4C;
+  font-weight: 800;
+
+}
+/*----------------------------------------------NAV SESSION------------------------- */
+.navbar {
+  font-family:  "Ubuntu", sans-serif;
+  font-weight: 800;
+  background-color: #D9D9D9;
+  --bs-navbar-padding-x: 108px;
+  --bs-navbar-padding-y: 0;
 }
 
-nav{
-    background-color: var(--secondary-color);
+.collapse{
+  justify-content: flex-end;
+}
+
+.navbar-nav{
+  align-items: center;
+}
+
+.nav-link{
+  color: #161E4C;
+}
+
+
+/*---------------------------SECCION MAIN---------------------*/
+
+
+
+
+
+
+
+
+
+
+
+/*-----------------SECCION FOOTER----------------------------*/
+.footer{
     display: flex;
-    justify-content: center;
-    width: auto;
- }  
-    
- .container_nav{
-     flex: 1;
-     display: flex;
-     background-color: var(--secondary-color);
-     height: 70px;
-     max-width: 1440px;
-     justify-content: space-around;
-     align-items: center;
- }
- 
- .link_menu{
-     margin: 10px;
- }
- .container_nav ul{
-     display: flex;
-     list-style: none;
-     align-items: center;
-     margin: 0;
-     padding: 0;
- }
- 
- .container_nav a{
-     text-decoration: none;
-     color: var( --button-color);
-     font-size: 24px;
-     font-weight: bold;
-     padding: 0 19px;
- }
+    background-color: #D9D9D9;
+    justify-content: space-evenly;
+    align-items: stretch;
+}
+
+.footerContain{
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    text-align: center;
+}
+
+.footermargin{
+    margin-top: 70px;
+}
+.textAling{
+    text-align: center;
+}
+.textContact a{
+  text-decoration: none;
+  color: #161E4C;
+}
+
+.textAlignC{
+text-align: center;
+}
+
+.logoText{
+    font-family:  "Ubuntu", sans-serif;
+    color: #161E4C;
+}
+
+.textContact{
+    font-family:  "Ubuntu", sans-serif;
+    color: #161E4C;
+}
